<resources>
    <string name="app_name">Hw</string>
    <string name="username">Name</string>
    <string name="password">Password</string>
    <string name="reg">Register</string>
    <string name="surname">Surname</string>
    <string name="date_of_birth">Your Age</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="second_page">Second Page</string>
</resources>