<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bc"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/icon_acc"
            android:contentDescription="@string/todo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/username"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/round"
            android:padding="18dp"
            android:inputType="text"
            android:id="@+id/username_input"
            android:autofillHints=""

            />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/surname"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/round"
            android:padding="18dp"
            android:inputType="text"
            android:id="@+id/sur_input"
            android:autofillHints="no" />



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/date_of_birth"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/round"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:padding="18dp"
            android:inputType="date"
            android:id="@+id/birth_input"
            android:autofillHints="no" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/login"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/round"
            android:padding="18dp"
            android:inputType="text"
            android:id="@+id/log_input"
            android:importantForAutofill="no" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/round"
            android:padding="18dp"
            android:inputType="textPassword"
            android:id="@+id/password_input"
            android:importantForAutofill="no" />




        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg"
            android:backgroundTint="@color/smth"
            android:textColor="@color/idk"
            android:padding="18dp"
            android:layout_marginTop="32dp"
            android:textSize="20sp"
            android:id="@+id/login_button"

            />

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text=""-->


    </LinearLayout>


</RelativeLayout>